--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,42 @@
 .App {
     text-align: center;
 }
+
+.complete {
+    text-decoration: line-through;
+    opacity: 0.4;
+  }
+  
+.todo-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 4px auto;
+    color: primary;
+    background: linear-gradient(
+        90deg,
+        rgba(0, 0, 0, 1) 0%,
+        rgba(255, 255, 255, 1) 100%
+        rgba(0, 0, 0, 1) 100%
+    );
+  
+    padding: 16px;
+    border-radius: 5px;
+    width: 90%;
+  }
+
+  .icons {
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+    cursor: pointer;
+  }
+  
+  .delete-icon {
+    margin-right: 5px;
+    color: #8c8585;
+  }
+  
+  .edit-icon {
+    color: #8c8585;
+  }
